--- a/PECO.html
+++ b/PECO.html
@@ -47,7 +47,7 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/EPA_bg1.jpg);">
+            <div class="pic index2-picture" style="background: url(assets/images/PECO_bg1.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
                     <h3>2020 PECO Environmental Justice (EJ) Study</b>
@@ -74,11 +74,7 @@ Justice Area Study</b>
                         <br> 
                     </div>
                     <div class="col-md-5">
-                        <h3>Growing Together</h3>
-                        <br>
-                        <h4>The Story of How our Winning design proposal is Making a Real Difference to Andrew Hamilton School</h4>
-                        <br>
-                        <h3>Project Objectives</h3>
+                         <h3>Project Objectives</h3>
                          <p> 
 This project aimed to support PECO's commitment to equitable energy access by examining challenges and opportunities within Environmental Justice (EJ) areas in Southeastern Pennsylvania. 
                           <p>
