--- a/PECO.html
+++ b/PECO.html
@@ -89,18 +89,16 @@ This project aimed to support PECO's commitment to equitable energy access by ex
 4. Environmental and Social Analysis: Assessed air quality challenges, transportation electrification barriers, and household electrification opportunities. Recommendations included equity-focused strategies for infrastructure improvements and community-driven programs.
 5. Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
 
-                          <br>                                                                                                       
-                          <br>
-                          <h4>Design Solutions</h4>
+                          <br>                                                                                                     
                           <p>
                           <br>
                         <div class="details">
-                            <h6> Teammates </h6>
-                            <span>Corey Wills, Mrinalini Verma, Haoge Xu, etc..</span>
+                            <h6> Professional Experience </h6>
+                            <span>CHPlanning l.td</span>
                             <h6> Categories </h6>
-                            <span>Campus RainWorks Challenge Competition</span>
+                            <span>Evironmental Justice Study</span>
                             <h6> Date </h6>
-                            <span>04/15/2020 - 12/11/2020</span>
+                            <span>09/01/2023 - 12/30/2024</span>
                         </div>
                     </div>
                 </div>
