--- a/PECO.html
+++ b/PECO.html
@@ -50,10 +50,10 @@
             <div class="pic index2-picture" style="background: url(assets/images/PECO_bg1.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3>2020 PECO Environmental Justice (EJ) Study</b>
-                    <h3><b>Southeastern Pennsylvania Electric Company Environmental
+                    <h3>PECO Environmental Justice (EJ) Study</b>
+                    <h4><b>Southeastern Pennsylvania Electric Company Environmental
 Justice Area Study</b>
-                    </h3>                    
+                    </h4>                    
                 </div>
             </div>
         </div>
