--- a/MIRR.html
+++ b/MIRR.html
@@ -47,12 +47,11 @@
             </div>
         </header>
         <div class="first-content">
-            <div class="pic index2-picture" style="background: url(assets/images/PECO_bg1.jpg);">
+            <div class="pic index2-picture" style="background: url(assets/images/Mirr_bg1.jpg);">
                 <div class="overlay"></div>
                 <div class="content">
-                    <h3>PECO Environmental Justice (EJ) Study</b>
-                    <h4><b>Southeastern Pennsylvania Electric Company Environmental
-Justice Area Study</b>
+                    <h3>Building Resilience Together:</b>
+                    <h4><b>Community-Military Collaboration on Resilience in Washington, D.C.</b>
                     </h4>                    
                 </div>
             </div>
@@ -61,34 +60,34 @@ Justice Area Study</b>
        <div class="index2-content">
             <div class="container">
                 <div class="row items1">
-                    <div class="col-md-7">
-                        <iframe width="560" height="315" src="https://chp-nsp.maps.arcgis.com/apps/dashboards/7e6261d8fd074a8d86a987c28f13350b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                        </iframe>
+                    <div class="col-md-7">                        
+                        <img src="assets/images/Mirr01.jpg" alt="">
                         <br>
                         <br>
-                        <img src="assets/images/PECO01.jpg" alt="">
-                        <br>
-                        <br>
-                        <img src="assets/images/PECO02.jpg" alt="">
+                        <img src="assets/images/Mirr02.jpg" alt="">
                         <br>
                         <br> 
                     </div>
                     <div class="col-md-5">
-                         <h3>Project Objectives</h3>
+                         <h3>Project Overview</h3>
                          <p> 
-This project aimed to support PECO's commitment to equitable energy access by examining challenges and opportunities within Environmental Justice (EJ) areas in Southeastern Pennsylvania. 
+As a resilience expert, I led the assessment of vulnerabilities related to flood scenarios for the Military Installation Resilience Review (MIRR) in Washington, D.C. My role focused on evaluating the risks posed by riverine, pluvial, and marine flooding to critical infrastructure and communities, using advanced geospatial and climate modeling techniques. 
                           <p>
                           As the leader responsible for the geospatial components and assessment of the Environmental Justice (EJ) study for PECO, I played a critical role in identifying spatial disparities and opportunities within disadvantaged communities in Southeastern Pennsylvania. My expertise in geospatial technologies and environmental assessment was pivotal in analyzing complex data sets, mapping EJ areas, and providing actionable insights to promote equitable energy access.
                           <br>
                           <br>
-                          <h4>Project Sections</h4>                          
+                          <h4>Project Objectives</h4>                          
                           <p>                          
-                          1. GIS Mapping Application: Developed a secure GIS-based tool to analyze PECO's service area, integrating datasets like demographic statistics, energy usage, and transportation data. The tool facilitated identifying EJ areas and informed case study selection.
-2. Community Profiles: Created detailed profiles for selected urban and suburban EJ neighborhoods, incorporating historical energy burden data, demographics, and access to electrification. These profiles highlighted barriers and opportunities for energy solutions.
-3. Community Engagement: Conducted focus groups and surveys with residents, community leaders, and organizations to map assets, understand local needs, and gather insights on electrification opportunities, such as EV charging infrastructure and home energy solutions.
-4. Environmental and Social Analysis: Assessed air quality challenges, transportation electrification barriers, and household electrification opportunities. Recommendations included equity-focused strategies for infrastructure improvements and community-driven programs.
-5. Address environmental injustices by mitigating the urban heat island effect and enhancing green space access.
-
+                          Evaluate "outside-the-fence" vulnerabilities impacting operations.
+                        Address climate hazards like flooding, extreme heat, and ice storms.
+Develop equitable, actionable resilience measures.
+                          <br>
+                          <h4>Methodology</h4>                          
+                          <p>                          
+                          1. Geospatial Analysis: Mapped critical infrastructure risks under future climate scenarios.
+2. Vulnerability Assessment: Evaluated dependencies, exposure, and community vulnerabilities.
+3. Stakeholder Engagement: Collaborated with advisory committees and community stakeholders.
+4. Resilience Planning: Prioritized 14 key measures, including stormwater retrofits, blue-green infrastructure, and transit connectivity.
                           <br>                                                                                                     
                           <p>
                           <br>
@@ -96,9 +95,9 @@ This project aimed to support PECO's commitment to equitable energy access by ex
                             <h6> Professional Experience </h6>
                             <span>CHPlanning l.td</span>
                             <h6> Categories </h6>
-                            <span>Evironmental Justice Study</span>
+                            <span>Flood Risk Assessment</span>
                             <h6> Date </h6>
-                            <span>09/01/2023 - 12/30/2024</span>
+                            <span>09/01/2022 - 12/30/2022</span>
                         </div>
                     </div>
                 </div>
