--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -159,6 +159,18 @@ SCHOOL</a></h5>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
+						<img src="assets/images/Mirr_bg.jpg" alt="">
+						<div class="overlay">
+							<div class="overlay-inner">
+								<h3><a href="MIRR.html">Building Resilience:</a></h3>
+								<h5><a href="MIRR.html">Community-Military Collaboratin
+on Resiliencein Washington, D.C.</a></h5>
+							</div>
+						</div>
+					</div>
+				</div>				
+				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
+					<div class="item">
 						<img src="assets/images/urbandesign_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
@@ -167,8 +179,7 @@ SCHOOL</a></h5>
 							</div>
 						</div>
 					</div>
-				</div>				
-
+				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 selector data">
 					<div class="item">
 						<img src="assets/images/FloodInnundation.jpg" alt="">
