--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -159,7 +159,7 @@ SCHOOL</a></h5>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12 selector design">
 					<div class="item">
-						<img src="assets/images/Mirr_bg.jpg" alt="">
+						<img src="assets/images/MIRR_bg.jpg" alt="">
 						<div class="overlay">
 							<div class="overlay-inner">
 								<h3><a href="MIRR.html">Building Resilience:</a></h3>
