--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li><a href="index.html" class="active">Home</a></li>
 								<li><a href="about.html">Resume</a></li>
 								<li><a href="portfolio-4.html">Portfolio</a></li>
-								<li><a href="blog.html">Blog</a></li>
+								<li><a href="blog.html">Research</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
