--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html" class="active">Resume</a></li>
 								<li><a href="portfolio-4.html">Portfolio</a></li>
-								<li><a href="blog.html">Blog</a></li>
+								<li><a href="blog.html">Research</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
