--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -38,7 +38,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">Resume</a></li>
 								<li><a href="portfolio-4.html" class="active">Portfolio</a></li>
-								<li><a href="blog.html">Blog</a></li>
+								<li><a href="blog.html">Research</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
