--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">Resume</a></li>
                                 <li><a href="portfolio-4.html">Portfolio</a></li>
-                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="blog.html">Research</a></li>
                                 <li><a href="contact.html" class="active">Contact</a></li>
                             </ul>
                         </div>
