--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">Resume</a></li>
 								<li><a href="portfolio-4.html">Portfolio</a></li>
-								<li><a href="blog.html" class="active">Blog</a></li>
+								<li><a href="blog.html" class="active">Research</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</div>
@@ -50,7 +50,7 @@
 			<div class="pic picture2" style="background: url(assets/images/bg4.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3>BLOG</h3>
+					<h3>RESEARCH</h3>
 				</div>
 			</div>
 		</div>
