--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 					<h3> Enviornmental Planner </h3>
 					<br>
 					<br>
-					<h3> Urban Resilient Expert </h3>
+					<h3> Geospatial Analysis Expert </h3>
 					<br>
 					<br>
 					<h3> Story Teller </h3>
