--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -155,12 +155,12 @@
                 
               </p>
             <div class="btn-load-more">
-  						<a class="load-more" href="https://drive.google.com/file/d/1WlxBhoHLMOijnZm7mmdn30-50u4jwBeo/view?usp=sharing">Report</a>
+  						<a class="load-more" href="">Report</a>
   						<br>
   						<br>
             </div>
             <div class="btn-load-more">
-  						<a class="load-more" href="http://echowoo.com/How-does-landscape-project-change-in-Navy-Yard.github.io/">WebApp</a>
+  						<a class="load-more" href="">WebApp</a>
   						<br>
             </div>
               <div>
@@ -213,7 +213,7 @@
 
     <footer>
       <div class="main-footer">
-        <p> Copyright © 2019 By Xiao WU</p>
+        <p> Copyright © 2024 By Leila BahramiU</p>
         <p>Made with Bootstrap Jquery.</p>
         <div class="icons">
           <ul>
