--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -219,8 +219,8 @@
           <ul>
             <li><a target="_BLANK" href="https://www.linkedin.com/in/leila-bahrami-363127137/"><i class="fa fa-linkedin"></i> </a></li>
 						<li><a target="_BLANK" href="https://github.com/lbahrami"><i class="fa fa-github"></i> </a></li>
-						<li><a target="_BLANK" href="https://www.facebook.com/people/Echo-Woo/100008072611716"><i class="fa fa-facebook"></i> </a></li>
-						<!-- <li><a target="_BLANK" href="https://www.instagram.com/leyli_bahrami/"><i class="fa fa-instagram"></i> </a></li> -->
+						<li><a target="_BLANK" href="https://www.facebook.com/lili.bahrami1"></i> </a></li>
+						
 						
           </ul>
         </div>
