--- a/BaltimoreUHI.html
+++ b/BaltimoreUHI.html
@@ -213,7 +213,7 @@
 
     <footer>
       <div class="main-footer">
-        <p> Copyright © 2024 By Leila BahramiU</p>
+        <p> Copyright © 2024 By Leila Bahrami</p>
         <p>Made with Bootstrap Jquery.</p>
         <div class="icons">
     
