--- a/InterpretingLandCover.html
+++ b/InterpretingLandCover.html
@@ -73,7 +73,7 @@
                         <img src="assets/images/Landcover04.jpg" alt="">
                         </div>
                     <div class="col-md-5">
-                        <h3>Predicting Food Inspection Failure in Chicago</h3>
+                        <h3>Landcover Interpretation in New Jersey Shore</h3>
                         <br>
                         <h4><b>Intro</b></h4>
                         <p>This project aims to improve wetland land cover classification in Great Bay, New Jersey coastal area using high-resolution data collected through Unmanned Aerial Vehicles (UAVs) equipped with multispectral cameras. In this project we use multispectral imagery to better distinguish between wetland types, such as high and low marsh areas, which are typically oversimplified in thematic data such as that provided by the National Land Cover Database (NLCD).  
