--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 					<div class="col-md-5 col-sm-6 col-xs-12">
 						<h3> About Me </h3>
 						<div class="line"></div>
-						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view"> Resume Download</a> -->
+						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view?usp=sharing"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
 						<p>I am an experienced enviornmental planner and designer specialized in climate modeling, spatila nalysis, machine learning and visual communication.</p>
