--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<img src="assets/images/researh1.jpg" alt="">
 						</div>
 						<div class="pic-inner">
-							<h3><a href="https://drive.google.com/file/d/1aLJRueKutA_QDC0s5mvtxurLb8zG4kd9/view">Health and social inequalities in Urban Heat Exposure Areas in New Orleans</a>
+							<h3><a href="https://drive.google.com/file/d/1aLJRueKutA_QDC0s5mvtxurLb8zG4kd9/view?usp=sharing">Health and social inequalities in Urban Heat Exposure Areas in New Orleans</a>
 							</h3>
 							<span>2024-10-01</span>
 							<p> How do health and social inequalities shape urban heat exposure in New Orleans?
@@ -131,7 +131,7 @@
 
 </p>
 								<div class="btn-load-more">
-								<a class="load-more" href="https://drive.google.com/file/d/1aLJRueKutA_QDC0s5mvtxurLb8zG4kd9/view">Read More</a>
+								<a class="load-more" href="https://drive.google.com/file/d/1aLJRueKutA_QDC0s5mvtxurLb8zG4kd9/view?usp=sharing">Read More</a>
 							</div>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 							<span>2020-05-01</span>
 							<p> This paper examines the relationship between land surface temperature (LST), land use, and socioeconomic variables, highlighting disparities in heat exposure. It identifies impervious surfaces and vegetation as primary drivers and explores equity-focused strategies to mitigate urban heat impacts.
 								<div class="btn-load-more">
-								<a class="load-more" href="https://drive.google.com/file/d/1jlh70Bfy_S1lcUoW6Q9sFHlqsnBtc2yW/view">Read More</a>
+								<a class="load-more" href="https://drive.google.com/file/d/1jlh70Bfy_S1lcUoW6Q9sFHlqsnBtc2yW/view?usp=sharing">Read More</a>
 							</div>
 						</div>
 					</div>
