--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 			<div class="pic about-picture" style="background: url(assets/images/aboutimage3.jpg);">
 				<div class="overlay"></div>
 				<div class="content">
-					<h3> Enviornmental Planner </h3>
+					<h3> Landscape Designer </h3>
 					<br>
 					<br>
 					<h3> Geospatial Analysis Expert </h3>
