--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="content">
 					<h2>Leila Bahrami</h2>
 					
-					<h3>Environmental Planner</h3>
-					<h3>Climate Resilience Expert</h3>
+					<h3>Landscape Designer</h3>
+					<h3>Climate Resilience Researcher</h3>
 					
 				</div>
 			</div>
