--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 						<div class="line"></div>
 						<h4>Climate Change & Resilience;</h4>
 						<h4>Urban Environmental Modeling;</h4>
-						<h4>Climate and Health;</h4>
+						<h4>Community Health & Active Living;</h4>
 						<h4>Social Jutice;</h4>
 						<br>
 						<br>
 						<h4>Remote Sensing; Geospatila Analytics</h4>
 						<h4>GIScience; Mahchine Learning</h4>
-						<h4>WRF-UCM; Predictive Modeling </h4>
+						<h4>ENVI-MET; Predictive Modeling </h4>
 						<br>
 						<br>						
 						<h3> Background </h3>
