--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<br>
 						<h4>Remote Sensing; Geospatila Analytics</h4>
 						<h4>GIScience; Mahchine Learning</h4>
-						<h4>ENVI-MET; Predictive Modeling </h4>
+						<h4>ENVI-MET; Ecological cost assessment </h4>
 						<br>
 						<br>						
 						<h3> Background </h3>
