--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 						<br>
 						<h3> Mission </h3>
 						<div class="line"></div>
-						<p> My expertise lies in integrating machine learning (Geo-AI), remote sensing and GIS techniques to explore the complex relationships between human, urban and natural systems under climate change, which aims to provide both scientific and practical frameworks for designing more resilient and sustainable communities.<p>
-						<p> My goal is to promote urban climate equity through urban planning.<p>	
+						<p> My expertise lies in integrating physics-based environmental simulation, and geospatial analytics to investigate the complex interactions between human behavior, urban form, and natural systems under climate change. This work aims to generate both scientific knowledge and applied design frameworks for shaping climate-adaptive, low-carbon, and ecologically efficient communities.<p>
+						<p> My goal is to promote enviornmental sustainability through resilient design.<p>	
 						<br>
 						<div class="btn-load-more">
 						<center><a class="load-more" href="https://drive.google.com/file/d/1E1HRkWBln_fqe2x3AbdUtYX72kK3riTK/view?usp=sharing">Resume</a></center>
