--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 						<br>						
 						<h3> Background </h3>
 						<div class="line"></div>
-						<p>As a research professional with experience at the Environmental Modeling Lab at UPenn and in the private sector, I specialize in integrating spatial data, machine learning, and GIS to analyze human, urban, and natural systems under extreme climate events.</p>
+						<p>My research focuses on the design and evaluation of climate-adaptive urban environments through the integration of microclimate modeling, Geo-AI, nature-based solutions, and environmental performance analytics. I develop hybrid physics–AI frameworks that link outdoor thermal comfort, active living, public health, and equity with ecological and carbon footprint assessment, positioning urban design as a measurable environmental and health intervention.</p>
 						<br>
-						<p> Over the past three years, I have conducted advanced statistical modeling in R to simulate climate vulnerability, leading regional climate action plans, and advanced environmental justice studies.</p>
+						<p> My work advances data-driven planning and design strategies that use spatial modeling and environmental simulation to shape human behavior, reduce heat vulnerability, lower ecological and carbon impacts, and support the creation of equitable, resilient, and low-carbon urban systems under climate change.</p>
 						<br>
 						<p> My current work involves using spatial data and machine learning to understand urban resilience and health challenges in the face of global change, including heat extremes and pandemics.<p>
 						<br>
