--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 						<h3> Research Interest </h3>
 						<div class="line"></div>
 						<h4>Climate Change & Resilience;</h4>
-						<h4>Urban Environmental Modeling;</h4>
+						<h4>Microclimate Modeling & Thermal Comfort;</h4>
 						<h4>Community Health & Active Living;</h4>
-						<h4>Social Jutice;</h4>
+						<h4>Nature-Based Solutions & Ecological Footprint;</h4>
 						<br>
 						<br>
-						<h4>Remote Sensing; Geospatila Analytics</h4>
-						<h4>GIScience; Mahchine Learning</h4>
-						<h4>ENVI-MET; Ecological cost assessment </h4>
+						<h4>Remote Sensing; Geo-AI, Machine Learning & Hybrid Physics–AI Modeling</h4>
+						<h4>Lifecycle Assessment & Ecological Cost Evaluation</h4>
+						<h4>ENVI-MET; Urban Environmental Simulation </h4>
 						<br>
 						<br>						
 						<h3> Background </h3>
