--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<h4>Nature-Based Solutions & Ecological Footprint;</h4>
 						<br>
 						<br>
-						<h4>Remote Sensing; Geo-AI, Machine Learning & Hybrid Physics–AI Modeling</h4>
+						<h4>Remote Sensing; Hybrid Physics–AI Modeling</h4>
 						<h4>Lifecycle Assessment & Ecological Cost Evaluation</h4>
 						<h4>ENVI-MET; Urban Environmental Simulation </h4>
 						<br>
