--- a/about.html
+++ b/about.html
@@ -89,12 +89,9 @@
 						<!-- <a href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view?usp=sharing"> Resume Download</a> -->
 					</div>
 					<div class="col-md-7 col-sm-6 col-xs-12">
-						<p>I am an experienced enviornmental planner and designer specialized in climate modeling, spatila nalysis, machine learning and visual communication.</p>
+						<p>I am a climate-focused urban researcher and designer specializing in microclimate modeling, Geo-AI, environmental simulation, geospatial analytics, and climate-adaptive design. My research integrates urban planning, environmental physics, and data science to examine how nature-based solutions and spatial design shape thermal comfort, active living, public health, and equity in urban environments.</p>
 						<br>						
-						<p> My research combines urban planning, environmental modeling, and climate science to address the challenges of climate resilience, with a
-focus on mitigating heat exposure and its social and health inequities. I explore the asymmetric impacts of extreme weather events on vulnerable
-communities and critical infrastructure. Through advanced methodologies in GIS, machine learning, remote sensing, and spatial statistics, I develop
-actionable, data-driven strategies to tackle complex climate challenges, promote equity, and guide sustainable urban planning and adaptation efforts.</p>
+						<p> My work advances hybrid physics–AI modeling frameworks that link heat mitigation, ecological and carbon footprint reduction, and health outcomes, with a particular focus on heat-vulnerable populations and climate-exposed neighborhoods. Through advanced methodologies in GIS, machine learning, remote sensing, and spatial statistics, I develop actionable, data-driven strategies to support the creation of equitable, resilient, and low-carbon urban systems under climate change.</p>
 						<div class="btn-load-more">
 						<center><a class="load-more" href="https://drive.google.com/file/d/1UuyVkPKO_67SdAwHL2x9fNimBo5qhS85/view">Resume</a></center>
 						<br>
